# ioscmd

./: LICENSE  READE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pip.yml
ioscmd/: __main__.py  exceptions.py  relay.py  sockets.py  ssh.py  ssh_client.py  utils.py
ioscmd/command/: cli.py  devices.py  install.py  pull.py  shell.py  ssh.py  upload.py
